<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@layout/app_back"
    android:padding="10dp" >

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >


        <TextView
            android:id="@+id/intro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:padding="20dp"
            android:text="@string/app_name"
            android:textColor="#000000"
            android:textSize="55sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/play_btn"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/intro"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp"
            android:background="@layout/enter_back"
            android:padding="20dp"
            android:text="@string/play"
            android:textColor="#ff333333"
            android:textSize="35sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/help_btn"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/play_btn"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp"
            android:background="@layout/enter_back"
            android:padding="35dp"
            android:text="@string/how"
            android:textColor="#ff333333"
            android:textSize="35sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/high_btn"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/help_btn"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp"
            android:background="@layout/enter_back"
            android:padding="35dp"
            android:text="@string/high"
            android:textColor="#ff333333"
            android:textSize="35sp"
            android:textStyle="bold" />
    </RelativeLayout>

</ScrollView>